--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -20,21 +20,6 @@
             android:src="@drawable/img_def_photo" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="bottom"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_sex"
-                android:layout_width="@dimen/size_all_button_text_size"
-                android:layout_height="@dimen/size_all_button_text_size"
-                android:layout_margin="5dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
@@ -42,13 +27,27 @@
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_niname"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/color_black"
-                android:textSize="@dimen/size_me_name_text_size"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_niname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_black"
+                    android:textSize="@dimen/size_me_name_text_size"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/iv_sex"
+                    android:layout_width="@dimen/size_all_button_text_size"
+                    android:layout_height="@dimen/size_all_button_text_size"
+                    android:layout_margin="5dp"
+                    android:layout_marginLeft="10dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_account"
