--- a/app/src/main/res/layout/view_list_friend.xml
+++ b/app/src/main/res/layout/view_list_friend.xml
@@ -19,42 +19,45 @@
             android:src="@drawable/img_def_photo" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:gravity="bottom"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_sex"
-                android:layout_width="@dimen/size_all_button_text_size"
-                android:layout_height="@dimen/size_all_button_text_size"
-                android:layout_margin="5dp" />
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv_niname"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:textColor="@color/color_black"
-                android:textSize="@dimen/size_me_name_text_size"
-                android:textStyle="bold" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_niname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:textColor="@color/color_black"
+                    android:textSize="@dimen/size_friend_list_title_size"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/iv_sex"
+                    android:layout_width="@dimen/size_all_button_text_size"
+                    android:layout_height="@dimen/size_all_button_text_size"
+                    android:layout_margin="5dp"
+                    android:layout_marginLeft="10dp" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:maxLines="1"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
                 android:textColor="@color/color_black"
                 android:textSize="@dimen/size_me_name_account_size" />
 
