--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4a90e2</color>
-    <color name="colorPrimaryDark">#4a90e2</color>
+    <color name="colorPrimary">#4598FF</color>
+    <color name="colorPrimaryDark">#4598FF</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="color_white">@android:color/white</color>
