--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,7 @@
                     android:src="@drawable/img_session_a" />
 
                 <TextView
-                    android:visibility="gone"
+                    android:visibility="invisible"
                     android:id="@+id/tv_unread_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
