--- a/app/src/main/res/layout/view_list_chat_left_video.xml
+++ b/app/src/main/res/layout/view_list_chat_left_video.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_photo"
+                android:layout_width="@dimen/size_chat_photo_size"
+                android:layout_height="@dimen/size_chat_photo_size"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/img_def_photo" />
+
+            <ImageView
+                android:id="@+id/iv_left_video"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:layout_marginLeft="10dp"
+                android:gravity="center" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </LinearLayout>
