--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -5,17 +5,43 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/mSwLayout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mFriendRyView"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
 
-    </android.support.v4.widget.SwipeRefreshLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/mFriendRyView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <!--字母提示-->
+            <TextView
+                android:id="@+id/tvToast"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:alpha="0.5"
+                android:background="@color/color_gary"
+                android:gravity="center"
+                android:text="A"
+                android:textColor="@android:color/white"
+                android:textSize="25sp"
+                android:visibility="gone" />
+
+            <!--字母导航-->
+            <com.liuguilin.im.view.LettersView
+                android:id="@+id/mLettersView"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="right" />
+
+        </FrameLayout>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
