--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -6,10 +6,14 @@
     android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
-        app:tabMode="scrollable"
+        app:tabIndicatorColor="@color/colorPrimary"
         android:id="@+id/mTabLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/color_white"
+        app:tabMode="scrollable"
+        app:tabSelectedTextColor="@color/colorPrimary"
+        app:tabTextColor="@color/color_black" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/mViewPager"
