--- a/app/src/main/res/layout/view_list_chat_left_img.xml
+++ b/app/src/main/res/layout/view_list_chat_left_img.xml
@@ -23,6 +23,7 @@
                 android:src="@drawable/img_def_photo" />
 
             <ImageView
+                android:scaleType="fitXY"
                 android:id="@+id/iv_left_img"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
