--- a/app/src/main/res/layout/view_list_chat_right_img.xml
+++ b/app/src/main/res/layout/view_list_chat_right_img.xml
@@ -16,6 +16,7 @@
             android:padding="5dp">
 
             <ImageView
+                android:scaleType="fitXY"
                 android:id="@+id/iv_right_img"
                 android:layout_width="200dp"
                 android:layout_height="150dp"
