--- a/app/src/main/res/layout/view_list_chat_right_video.xml
+++ b/app/src/main/res/layout/view_list_chat_right_video.xml
@@ -15,12 +15,27 @@
             android:orientation="horizontal"
             android:padding="5dp">
 
-            <ImageView
-                android:id="@+id/iv_right_video"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_right_video"
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
+                    android:scaleType="fitXY" />
+
+                <ImageView
+                    android:id="@+id/iv_play"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:src="@drawable/img_play" />
+
+            </RelativeLayout>
+
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_photo"
